Fixed up subcircuits
